2004-03-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_get_title_area)
	(gdl_dock_item_grip_item_notify, gdl_dock_item_grip_set_property)
	(gdl_dock_item_grip_size_request, gdl_dock_item_grip_size_allocate):
	* gdl/gdl-dock-item.h: Patch by Todd Berman.  Adds two new behaviors
	to hide the iconify and close button in the item handle.

	* gdl/test-dock.c (main): Modify the behavior of a couple items to test
	the new options.  Remove the log handlers code.

2004-02-28  Adam Weinberger  <adamw@FreeBSD.org>

	* configure.in: Added 'en_CA' (Canadian English) to ALL_LINGUAS.

2004-02-12  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	Patch by Jeroen Zwartepoorte and Gustavo Giráldez.
	
	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_size_allocate):
	Offset child allocation by the given allocation coordinates.
	
	* gdl/gdl-dock-item.c (gdl_dock_item_class_init)
	(gdl_dock_item_size_request, gdl_dock_item_size_allocate)
	(gdl_dock_item_style_set): Setup a default style for the
	GdlDockItem class which sets the xthickness/ythickness to 0. Use
	the thickness for size_request and respect it in size_allocate.
	
	* gdl/gdl-dock-notebook.c (gdl_dock_notebook_class_init): Setup a
	style for GdlDockItem objects docked inside GtkNotebooks so they
	have a 2 pixel border around them.

2004-02-08  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gdl/gdl-dock-bar.c: (update_dock_items): Properly add/remove items
	based on the ICONIFIED flag.
	* gdl/gdl-dock-item.c: (gdl_dock_item_show_item): Unset the ICONIFIED
	flag when showing an item.

2004-02-08  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* configure.in:
	* gdl/Makefile.am:
	* gdl/gdl-dock-bar.c:
	* gdl/gdl-dock-bar.h:
	* gdl/gdl-dock-item-grip.c: (gdl_dock_item_grip_get_title_area),
	(gdl_dock_item_grip_expose), (gdl_dock_item_grip_item_notify),
	(gdl_dock_item_grip_destroy), (gdl_dock_item_grip_set_property),
	(gdl_dock_item_grip_close_clicked),
	(gdl_dock_item_grip_iconify_clicked),