@@ -1,5 +1,12 @@
 2004-03-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
 
+	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_expose)
+	(gdl_dock_item_grip_item_notify, gdl_dock_item_grip_size_allocate):
+	Fix some RTL issues and the positioning for the iconify button when
+	the close is hidden.
+
+2004-03-01  Gustavo Giráldez  <gustavo.giraldez@gmx.net>
+
 	* gdl/gdl-dock-item-grip.c (gdl_dock_item_grip_get_title_area)
 	(gdl_dock_item_grip_item_notify, gdl_dock_item_grip_set_property)
 	(gdl_dock_item_grip_size_request, gdl_dock_item_grip_size_allocate):
